umol-io/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@openbabel_0315_OC(=O)c1sccc1S_41d4.smiles.snap
---
source: umol-io/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles
category: opensmiles
opensmiles:
  success: true
  summary:
    sum_formula: C5O2S2
    atom_count: 9
    bond_count: 9
